# financetracker

./: .env.example  .gitignore  ARTICLE.md  Dockerfile  INSTALL.md  README.md  app.py  docker-compose.saas.yml  docker-compose.yml  email_processor.py  provision.py  requirements.txt  saas.py
.github/workflows/: desktop-build.yml
desktop/: README.md  package-lock.json  package.json  screenshot-accounts.html  screenshot-budgets.html  screenshot-clear.html  screenshot-dashboard.html  screenshot-import.html  screenshot-reports.html
desktop/scripts/: generate_demo.py
desktop/src/: App.jsx  main.jsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/resources/: demo.db
desktop/src-tauri/src/: db.rs  lib.rs  main.rs
desktop/src-tauri/src/commands/: accounts.rs  budgets.rs  categories.rs  mod.rs  reports.rs  rules.rs  transactions.rs
desktop/src/api/: tauri.js
desktop/src/components/: Alert.jsx  Layout.jsx  Sidebar.jsx
legal/: Cookie_Management_Services_Guide.docx  Cookie_Policy.docx  Data_Processing_Agreement.docx  Privacy_Policy.docx  Terms_of_Service.docx
templates/: account_form.html  accounts.html  admin_dashboard.html  base.html  budget_form.html  budgets.html  categories.html  category_form.html  checkout_success.html  clear.html  dashboard.html  email_inbox.html  import.html  landing.html  login.html  register.html  reports.html  rule_form.html  rules.html  signup_cloud.html  signup_success.html  transaction_form.html  transactions.html
(+14 files in other folders)
