[package]
name = "financetracker-desktop"
version = "0.1.0"
description = "FinanceTracker Desktop App"
authors = []
edition = "2021"

[lib]
name = "financetracker_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
